--- a/index.html
+++ b/index.html
@@ -3,5 +3,11 @@
         <title>
             Welcome to the home page
         </title>
+        
     </head>
+    <body>
+        <p>
+            My name is Damian
+        </p>
+    </body>
 </html>
